--- a/src/main/resources/vertx-js/template/js.templ
+++ b/src/main/resources/vertx-js/template/js.templ
@@ -111,6 +111,8 @@ utils.convParamJsonArray(@{paramName})
 utils.convParamTypeUnknown(@{paramName})
 	@else{param.type.kind.basic}
 @{paramName}
+	@else{param.type.kind == CLASS_THROWABLE}
+utils.convParamThrowable(@{paramName})
 	@else{param.type.kind == CLASS_LIST}
 		@if{param.type.args[0].name == 'long' || param.type.args[0].name == 'java.lang.Long'}
 utils.convParamListLong(@{paramName})
@@ -215,6 +217,8 @@ utils.convReturnVertxGen(@includeNamed{templ}, @{returnType.raw.simpleName})
 (@includeNamed{templ}).toString()
 	@else{returnType.kind == CLASS_DATA_OBJECT}
 utils.convReturnJson(@includeNamed{templ}.toJson())
+	@else{returnType.kind == CLASS_THROWABLE}
+utils.convReturnThrowable(@includeNamed{templ})
 	@else{}
 	@comment{'This will probably happen if the return type is generic'}
 utils.convReturnTypeUnknown(@includeNamed{templ})
@@ -276,6 +280,8 @@ utils.convReturnTypeUnknown(@includeNamed{templ})
 					@else{param.type.kind == CLASS_OBJECT}
 						@code{cnt++}
 						true
+					@else{param.type.kind == CLASS_THROWABLE}
+						typeof __args[@{cnt++}] === 'object'
 					@else{}
 						typeof __args[@{cnt++}] === 'object'
 					@end{}
