--- a/src/main/resources/vertx-js/template/js.templ
+++ b/src/main/resources/vertx-js/template/js.templ
@@ -216,7 +216,7 @@ utils.convReturnVertxGen(@includeNamed{templ}, @{returnType.raw.simpleName})
 	@else{returnType.kind == CLASS_ENUM}
 (@includeNamed{templ}).toString()
 	@else{returnType.kind == CLASS_DATA_OBJECT}
-utils.convReturnJson(@includeNamed{templ}.toJson())
+utils.convReturnDataObject(@includeNamed{templ})
 	@else{returnType.kind == CLASS_THROWABLE}
 utils.convReturnThrowable(@includeNamed{templ})
 	@else{}
