Use case api for converting case

--- a/src/main/resources/vertx-js/template/js.templ
+++ b/src/main/resources/vertx-js/template/js.templ
@@ -5,7 +5,7 @@
 
 @code{
   def genModuleName(moduleType) {
-    return moduleType.raw.moduleName + "-js/" + helper.convertCamelCaseToUnderscores(moduleType.raw.simpleName);
+    return moduleType.raw.moduleName + "-js/" + CASE_CAMEL.to(CASE_SNAKE, moduleType.raw.simpleName);
   }
 }
 
